tests/fixtures/invalid/divmod_dict_none.py
# Cannot call divmod() with Dict[str, int], None
x = divmod({"a": 1}, None)
